--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Recipes</h1>
-    <ul>
-    <li><a href="salmon.html">Air Fryer Everything-Bagel Salmon Dinner</a></li>
-    <li><a href="tomatoes.html">Marinated Garden Tomatoes</a></li>    
-    <li><a href="shrimp.html">Chili Garlic Shrimp</a></li> 
-    <ul>   
-    
+    <div>
+        <h1 class="index-header">Recipes</h1>
+        <ul>
+            <li class="recipe-name"><a href="salmon.html">Air Fryer Everything-Bagel Salmon Dinner</a></li>
+            <li class="recipe-name"><a href="tomatoes.html">Marinated Garden Tomatoes</a></li>    
+            <li class="recipe-name"><a href="shrimp.html">Chili Garlic Shrimp</a></li> 
+        </ul>   
+    <div>
 </body>
 </html>
