--- a/odin-recipes/salmon.html
+++ b/odin-recipes/salmon.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air Fryer Everything-Bagel Salmon Dinner</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -14,39 +16,38 @@
     <h2>Ingredients</h2>
 
     <ul>
-        <li>cooking spray</li>
-        <li>1 large (8 ounces) sweet potato, cut into 1/4-inch wedges</li>
-        <li>3 teaspoons olive oil, divided</li>
-        <li>1/4 teaspoon salt, divided</li>
-        <li>1/4 teaspoon freshly ground black pepper, divided</li>
-        <li>1 tablespoon Dijon mustard</li>
-        <li>1 tablespoon honey</li>
-        <li>2 teaspoons mayonnaise</li>
-        <li>2 cups small broccoli florets</li>
-        <li>2 (5-6-ounces) salmon fillets</li>
-        <li>2 teaspoons everything bagel seasoning</li>
-        <li>1 teaspoon soy sauce</li>
+        <li class="ingridient">cooking spray</li>
+        <li class="ingridient">1 large (8 ounces) sweet potato, cut into 1/4-inch wedges</li>
+        <li class="ingridient">3 teaspoons olive oil, divided</li>
+        <li class="ingridient">1/4 teaspoon salt, divided</li>
+        <li class="ingridient">1/4 teaspoon freshly ground black pepper, divided</li>
+        <li class="ingridient">1 tablespoon Dijon mustard</li>
+        <li class="ingridient">1 tablespoon honey</li>
+        <li class="ingridient">2 teaspoons mayonnaise</li>
+        <li class="ingridient">2 cups small broccoli florets</li>
+        <li class="ingridient">2 (5-6-ounces) salmon fillets</li>
+        <li class="ingridient">2 teaspoons everything bagel seasoning</li>
+        <li class="ingridient">1 teaspoon soy sauce</li>
     </ul>
 
-    <h2>Preparation</h2>
 
-    <h3>Step 1</h3>
+    <h2>Step 1</h2>
 
     <p>Preheat air fryer to 400 degrees F (200 degrees C). Coat a sheet of foil with cooking spray.</p>
 
-    <h3>Step 2</h3>
+    <h2>Step 2</h2>
 
     <p>Toss sweet potatoes with 1 1/2 teaspoons oil and 1/8 teaspoon each salt and pepper in a bowl.
         Arrange sweet potatoes in an even layer on the foil; transfer to the air fryer basket.
         Cook until mostly tender, about 10 minutes.</p>
 
-    <h3>Step 3</h3>
+    <h2>Step 3</h2>
 
     <p>Meanwhile, stir together mustard, honey, and mayonnaise in a small bowl.
     In another bowl, toss broccoli with remaining 1 1/2 teaspoons oil and 1/8 teaspoon each
     salt and pepper.</p>
 
-    <h3>Step 4</h3>
+    <h2>Step 4</h2>
 
     <p>Push sweet potatoes to one side of the basket.
     Add salmon to the other side. Spoon 1 teaspoon mustard mixture onto each fillet;
@@ -55,7 +56,7 @@
     Cook until salmon is opaque and flakes easily with a fork and sweet potatoes and broccoli are tender,
     10 to 14 minutes.</p>
 
-    <h3>Step 5</h3>
+    <h2>Step 5</h2>
 
     <p>Stir soy sauce into the remaining mustard mixture; drizzle over sweet potatoes and broccoli to serve.</p>
 
