--- a/odin-recipes/shrimp.html
+++ b/odin-recipes/shrimp.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chili Garlic Shrimp</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <h1>Chili Garlic Shrimp</h1>
+    <h1 >Chili Garlic Shrimp</h1>
 
     <img src="shrimp.webp" style="height: auto; width: 600px;">
 
@@ -27,9 +29,8 @@
         <li>1 teaspoon soy sauce</li>
     </ul>
 
-    <h2>Preparation</h2>
 
-    <h3>Step 1</h3>
+    <h2>Step 1</h2>
 
     <p>Combine chili-garlic sauce, hoisin sauce, shrimp stock, tomato paste, mirin, sesame oil,
     2 teaspoons minced fresh ginger, 1 clove minced garlic, shallot,
@@ -37,26 +38,26 @@
     30 to 45 seconds.
     Set sauce aside, or refrigerate until needed.</p>
 
-    <h3>Step 2</h3>
+    <h2>Step 2</h2>
 
     <p>Heat oil in a large skillet or wok over medium high heat.
     When oil is hot, add garlic and ginger slices. Cook until browned,
     watching closely to avoid burning,about 2 minutes.
     Carefully remove garlic and ginger from the oil and discard.</p>
 
-    <h3>Step 3</h3>
+    <h2>Step 3</h2>
 
     <p>To the seasoned oil, carefully add shrimp and cook until it just begins to turn
     pink and curl head to tail, about 2 minutes. Turn shrimp and add prepared sauce.
     Cook, stirring, until shrimp are bright pink on the outside and the meat is opaque, 2 to 3 minutes.
     An instant-read thermometer inserted into the center should read 145 degrees F (63 degrees C).</p>
 
-    <h3>Step 4</h3>
+    <h2>Step 4</h2>
 
     <p>Remove shrimp from the skillet and keep warm.
     Continue cooking and stirring sauce until thickened and reduced to about 3/4 cup.</p>
 
-    <h3>Step 5</h3>
+    <h2>Step 5</h2>
 
     <p>Pour thickened sauce over shrimp, and toss to cover.</p>
 
