--- a/odin-recipes/tomatoes.html
+++ b/odin-recipes/tomatoes.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="styles.css">
+
+    <title>Marinated Garden Tomatoes</title>
 </head>
 <body>
     <h1>Marinated Garden Tomatoes</h1>
@@ -24,13 +26,11 @@
         <li>½ cup thinly sliced green onions</li>
     </ul>
 
-    <h2>Preparation</h2>
-
-    <h3>Step 1</h3>
+    <h2>Step 1</h2>
 
     <p>Combine vinegar, olive oil, parsley, thyme, garlic, salt, and pepper in a small bowl; mix well.</p>
 
-    <h3>Step 2</h3>
+    <h2>Step 2</h2>
 
     <p>Place tomatoes and onions in an 11x13-inch glass dish.
     Pour marinade on top, making sure to coat vegetables evenly.
