add image size to style.css and remove inline styles

--- a/odin-recipes/salmon.html
+++ b/odin-recipes/salmon.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Air Fryer Everything-Bagel Salmon Dinner</h1>
 
-    <img src="salmon.webp" style="height: auto; width: 600px;">
+    <img src="salmon.webp">
 
     <h2>Ingredients</h2>
 
