--- a/odin-recipes/shrimp.html
+++ b/odin-recipes/shrimp.html
@@ -10,7 +10,7 @@
 <body>
     <h1 >Chili Garlic Shrimp</h1>
 
-    <img src="shrimp.webp" style="height: auto; width: 600px;">
+    <img src="shrimp.webp">
 
     <h2>Ingredients</h2>
 
