--- a/odin-recipes/tomatoes.html
+++ b/odin-recipes/tomatoes.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Marinated Garden Tomatoes</h1>
 
-    <img src="tomatoes.webp" style="height: auto; width: 600px;">
+    <img src="tomatoes.webp">
 
     <h2>Ingredients</h2>
 
